--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </header>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/cheeseburger.html">Cheeseburger</a></li>
+            <li><a href="recipes/tacos.html">Tacos</a></li>
     </body>
 </html>
