--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,10 +6,10 @@
     </header>
     <body>
         <h1>Lasagna</h1>
-        <img src="Lasagna.jpg" alt="Lasagna">
+        <img src="images/Lasagna.jpg" alt="Lasagna">
         <h2>Description</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium aenean pharetra magna ac. Mauris ultrices eros in cursus turpis massa. Phasellus egestas tellus rutrum tellus pellentesque eu. Tincidunt lobortis feugiat vivamus at augue eget arcu. Tristique magna sit amet purus gravida quis blandit turpis. Aliquet nibh praesent tristique magna sit amet purus gravida. Ut tristique et egestas quis ipsum. Massa eget egestas purus viverra accumsan in. Lacus sed turpis tincidunt id aliquet risus feugiat in. Est sit amet facilisis magna etiam. Urna neque viverra justo nec ultrices dui sapien eget. Vestibulum sed arcu non odio euismod lacinia. Morbi blandit cursus risus at ultrices mi tempus. Suscipit tellus mauris a diam maecenas sed enim ut sem.
-
+            <br>
             Eget magna fermentum iaculis eu non diam phasellus. Dolor morbi non arcu risus quis. Eget felis eget nunc lobortis mattis aliquam faucibus purus in. Malesuada fames ac turpis egestas. Pellentesque elit eget gravida cum sociis natoque penatibus et magnis. Volutpat blandit aliquam etiam erat velit. Neque aliquam vestibulum morbi blandit cursus. Lectus mauris ultrices eros in cursus turpis massa. Convallis aenean et tortor at risus viverra adipiscing. Convallis tellus id interdum velit. Nisl tincidunt eget nullam non nisi est sit amet. Porttitor massa id neque aliquam.
         </p>
         <h2>Ingredients</h2>
